# synapse

./: .gitignore  CHANGELOG.md  synapse.cabal  synapse.prof
src/: Main.hs
src/Synapse/: Orphans.hs  Ppr.hs  SubstUtils.hs  Utils.hs
src/Synapse/Logic/: ConstrEq.hs  Derivation.hs  Injection.hs  Match.hs  Propagator.hs  Search.hs  SubstMap.hs  Substitution.hs  Unify.hs
src/Synapse/Syntax/: Context.hs  Judgment.hs  Rule.hs  System.hs  Term.hs
src/Synapse/Syntax/Parser/: Context.hs  Judgment.hs  Rule.hs  System.hs  Term.hs  Utils.hs
tests/: test1.syn
