cabal-version:      2.4
name:               synapse
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable synapse
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Synapse.Syntax.Term
      Synapse.Syntax.Judgment
      Synapse.Syntax.Parser.Utils
      Synapse.Syntax.Parser.Term
      Synapse.Logic.Unify
      Synapse.Logic.Substitution
      Synapse.Ppr

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      unbound-generics,
                      pretty,
                      megaparsec,
                      containers,
                      lens,
                      mtl,
    hs-source-dirs:   src
    default-language: Haskell2010
